# ai-knowledge-base

./: .gitignore
langchain-coding/: .env.example  01-openai.py  README.md  pyproject.toml
langchain-coding/01-helloword/: 01-openai.py  02-deepseek.py  03-bailian.py
langchain-coding/02-model/: 01-单论对话.py  02-多轮对话.py  03-llm.py  04-chat.py
langchain-coding/03-prompt/: 01-StringPrompt.py  02-ChatPrompt.py
