[project]
name = "langchain-coding"
version = "0.1.0"
description = "Minimal uv-managed LangChain experiment project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.31",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.14",
    "openai>=2.32.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
